// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reset attackerPassedLastTurn on discard 1`] = `
"\`V000\` \`n------\`
d0 \`n--\`"
`;

exports[`reset attackerPassedLastTurn on discard 2`] = `
{
  "attackerDeck": [],
  "attackerDiscardPile": [],
  "attackerHand": [],
  "attackerPassedLastTurn": false,
  "attackerStacks": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "defenderHand": [],
  "defenderPassedLastTurn": true,
  "defenderStacks": [
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
  ],
  "laneDecks": [
    [
      "?%",
      "4+",
      "7!",
      "9^",
      "@^",
      "5^",
      "@#",
      "3%",
      "6+",
      "@&",
      "a#",
      "4&",
      "3&",
    ],
    [
      "*#",
      "@!",
      "7&",
      "5%",
      "2%",
      "9%",
      "9#",
      ">#",
      "@+",
      "7+",
      "4#",
      "*!",
      "9+",
    ],
    [
      "3#",
      "*&",
      "8%",
      "5&",
      "*^",
      "?+",
      "4!",
      "8&",
      "3^",
      "3+",
      "8+",
      "8^",
      "8!",
    ],
    [
      ">+",
      "6#",
      "a&",
      "5!",
      "?^",
      "6^",
      "2&",
      "?&",
      "?#",
      "*%",
      ">!",
      "7^",
      "2+",
    ],
    [
      "*+",
      "3!",
      "6!",
      "8#",
      "5+",
      "9&",
      "a!",
      "?!",
      ">%",
      "9!",
      "2#",
      "a%",
      "2!",
    ],
    [
      "4%",
      "a+",
      "7#",
      ">&",
      "2^",
      "a^",
      "4^",
      "6%",
      "@%",
      "5#",
      "6&",
      "7%",
      ">^",
    ],
  ],
  "laneDiscardPiles": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "maxTurns": 110,
  "turn": 1,
}
`;

exports[`reset attackerPassedLastTurn on discard 3`] = `
"\`V001\` \`n------\`
a0 d3 / 2+ ha0 "
`;

exports[`reset attackerPassedLastTurn on discard 4`] = `
{
  "attackerDeck": [],
  "attackerDiscardPile": [],
  "attackerHand": [
    "2+",
  ],
  "attackerPassedLastTurn": false,
  "attackerStacks": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "defenderHand": [],
  "defenderPassedLastTurn": true,
  "defenderStacks": [
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
  ],
  "laneDecks": [
    [
      "?%",
      "4+",
      "7!",
      "9^",
      "@^",
      "5^",
      "@#",
      "3%",
      "6+",
      "@&",
      "a#",
      "4&",
      "3&",
    ],
    [
      "*#",
      "@!",
      "7&",
      "5%",
      "2%",
      "9%",
      "9#",
      ">#",
      "@+",
      "7+",
      "4#",
      "*!",
      "9+",
    ],
    [
      "3#",
      "*&",
      "8%",
      "5&",
      "*^",
      "?+",
      "4!",
      "8&",
      "3^",
      "3+",
      "8+",
      "8^",
      "8!",
    ],
    [
      ">+",
      "6#",
      "a&",
      "5!",
      "?^",
      "6^",
      "2&",
      "?&",
      "?#",
      "*%",
      ">!",
      "7^",
    ],
    [
      "*+",
      "3!",
      "6!",
      "8#",
      "5+",
      "9&",
      "a!",
      "?!",
      ">%",
      "9!",
      "2#",
      "a%",
      "2!",
    ],
    [
      "4%",
      "a+",
      "7#",
      ">&",
      "2^",
      "a^",
      "4^",
      "6%",
      "@%",
      "5#",
      "6&",
      "7%",
      ">^",
    ],
  ],
  "laneDiscardPiles": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "maxTurns": 110,
  "turn": 2,
}
`;

exports[`reset attackerPassedLastTurn on discard 5`] = `
"\`V002\` \`n------\`
d0 \`n--\`"
`;

exports[`reset attackerPassedLastTurn on discard 6`] = `
{
  "attackerDeck": [],
  "attackerDiscardPile": [],
  "attackerHand": [
    "2+",
  ],
  "attackerPassedLastTurn": false,
  "attackerStacks": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "defenderHand": [],
  "defenderPassedLastTurn": true,
  "defenderStacks": [
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
  ],
  "laneDecks": [
    [
      "?%",
      "4+",
      "7!",
      "9^",
      "@^",
      "5^",
      "@#",
      "3%",
      "6+",
      "@&",
      "a#",
      "4&",
      "3&",
    ],
    [
      "*#",
      "@!",
      "7&",
      "5%",
      "2%",
      "9%",
      "9#",
      ">#",
      "@+",
      "7+",
      "4#",
      "*!",
      "9+",
    ],
    [
      "3#",
      "*&",
      "8%",
      "5&",
      "*^",
      "?+",
      "4!",
      "8&",
      "3^",
      "3+",
      "8+",
      "8^",
      "8!",
    ],
    [
      ">+",
      "6#",
      "a&",
      "5!",
      "?^",
      "6^",
      "2&",
      "?&",
      "?#",
      "*%",
      ">!",
      "7^",
    ],
    [
      "*+",
      "3!",
      "6!",
      "8#",
      "5+",
      "9&",
      "a!",
      "?!",
      ">%",
      "9!",
      "2#",
      "a%",
      "2!",
    ],
    [
      "4%",
      "a+",
      "7#",
      ">&",
      "2^",
      "a^",
      "4^",
      "6%",
      "@%",
      "5#",
      "6&",
      "7%",
      ">^",
    ],
  ],
  "laneDiscardPiles": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "maxTurns": 110,
  "turn": 3,
}
`;

exports[`reset attackerPassedLastTurn on discard 7`] = `
"\`V003\` \`n------\`
a0 pX3 / X a3"
`;

exports[`reset attackerPassedLastTurn on discard 8`] = `
{
  "attackerDeck": [],
  "attackerDiscardPile": [],
  "attackerHand": [],
  "attackerPassedLastTurn": false,
  "attackerStacks": [
    [],
    [],
    [],
    [
      "2+",
    ],
    [],
    [],
  ],
  "defenderHand": [],
  "defenderPassedLastTurn": true,
  "defenderStacks": [
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
  ],
  "laneDecks": [
    [
      "?%",
      "4+",
      "7!",
      "9^",
      "@^",
      "5^",
      "@#",
      "3%",
      "6+",
      "@&",
      "a#",
      "4&",
      "3&",
    ],
    [
      "*#",
      "@!",
      "7&",
      "5%",
      "2%",
      "9%",
      "9#",
      ">#",
      "@+",
      "7+",
      "4#",
      "*!",
      "9+",
    ],
    [
      "3#",
      "*&",
      "8%",
      "5&",
      "*^",
      "?+",
      "4!",
      "8&",
      "3^",
      "3+",
      "8+",
      "8^",
      "8!",
    ],
    [
      ">+",
      "6#",
      "a&",
      "5!",
      "?^",
      "6^",
      "2&",
      "?&",
      "?#",
      "*%",
      ">!",
      "7^",
    ],
    [
      "*+",
      "3!",
      "6!",
      "8#",
      "5+",
      "9&",
      "a!",
      "?!",
      ">%",
      "9!",
      "2#",
      "a%",
      "2!",
    ],
    [
      "4%",
      "a+",
      "7#",
      ">&",
      "2^",
      "a^",
      "4^",
      "6%",
      "@%",
      "5#",
      "6&",
      "7%",
      ">^",
    ],
  ],
  "laneDiscardPiles": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "maxTurns": 110,
  "turn": 4,
}
`;

exports[`reset attackerPassedLastTurn on discard 9`] = `
"\`V004\` \`n------\`
d0 \`n--\`"
`;

exports[`reset attackerPassedLastTurn on discard 10`] = `
{
  "attackerDeck": [],
  "attackerDiscardPile": [],
  "attackerHand": [],
  "attackerPassedLastTurn": false,
  "attackerStacks": [
    [],
    [],
    [],
    [
      "2+",
    ],
    [],
    [],
  ],
  "defenderHand": [],
  "defenderPassedLastTurn": true,
  "defenderStacks": [
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
  ],
  "laneDecks": [
    [
      "?%",
      "4+",
      "7!",
      "9^",
      "@^",
      "5^",
      "@#",
      "3%",
      "6+",
      "@&",
      "a#",
      "4&",
      "3&",
    ],
    [
      "*#",
      "@!",
      "7&",
      "5%",
      "2%",
      "9%",
      "9#",
      ">#",
      "@+",
      "7+",
      "4#",
      "*!",
      "9+",
    ],
    [
      "3#",
      "*&",
      "8%",
      "5&",
      "*^",
      "?+",
      "4!",
      "8&",
      "3^",
      "3+",
      "8+",
      "8^",
      "8!",
    ],
    [
      ">+",
      "6#",
      "a&",
      "5!",
      "?^",
      "6^",
      "2&",
      "?&",
      "?#",
      "*%",
      ">!",
      "7^",
    ],
    [
      "*+",
      "3!",
      "6!",
      "8#",
      "5+",
      "9&",
      "a!",
      "?!",
      ">%",
      "9!",
      "2#",
      "a%",
      "2!",
    ],
    [
      "4%",
      "a+",
      "7#",
      ">&",
      "2^",
      "a^",
      "4^",
      "6%",
      "@%",
      "5#",
      "6&",
      "7%",
      ">^",
    ],
  ],
  "laneDiscardPiles": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "maxTurns": 110,
  "turn": 5,
}
`;

exports[`reset attackerPassedLastTurn on discard 11`] = `
"\`V005\` \`n------\`
a0 c3
\`n--\` c3 / 2+ / 
\`n--\` 1 0 2 / 2+ xa / >! 7^ ha0 "
`;

exports[`reset attackerPassedLastTurn on discard 12`] = `
{
  "attackerDeck": [],
  "attackerDiscardPile": [
    "2+",
  ],
  "attackerHand": [
    ">!",
    "7^",
  ],
  "attackerPassedLastTurn": false,
  "attackerStacks": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "defenderHand": [],
  "defenderPassedLastTurn": true,
  "defenderStacks": [
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
  ],
  "laneDecks": [
    [
      "?%",
      "4+",
      "7!",
      "9^",
      "@^",
      "5^",
      "@#",
      "3%",
      "6+",
      "@&",
      "a#",
      "4&",
      "3&",
    ],
    [
      "*#",
      "@!",
      "7&",
      "5%",
      "2%",
      "9%",
      "9#",
      ">#",
      "@+",
      "7+",
      "4#",
      "*!",
      "9+",
    ],
    [
      "3#",
      "*&",
      "8%",
      "5&",
      "*^",
      "?+",
      "4!",
      "8&",
      "3^",
      "3+",
      "8+",
      "8^",
      "8!",
    ],
    [
      ">+",
      "6#",
      "a&",
      "5!",
      "?^",
      "6^",
      "2&",
      "?&",
      "?#",
      "*%",
    ],
    [
      "*+",
      "3!",
      "6!",
      "8#",
      "5+",
      "9&",
      "a!",
      "?!",
      ">%",
      "9!",
      "2#",
      "a%",
      "2!",
    ],
    [
      "4%",
      "a+",
      "7#",
      ">&",
      "2^",
      "a^",
      "4^",
      "6%",
      "@%",
      "5#",
      "6&",
      "7%",
      ">^",
    ],
  ],
  "laneDiscardPiles": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "maxTurns": 110,
  "turn": 6,
}
`;

exports[`reset attackerPassedLastTurn on discard 13`] = `
"\`V006\` \`n------\`
d0 \`n--\`"
`;

exports[`reset attackerPassedLastTurn on discard 14`] = `
{
  "attackerDeck": [],
  "attackerDiscardPile": [
    "2+",
  ],
  "attackerHand": [
    ">!",
    "7^",
  ],
  "attackerPassedLastTurn": false,
  "attackerStacks": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "defenderHand": [],
  "defenderPassedLastTurn": true,
  "defenderStacks": [
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
  ],
  "laneDecks": [
    [
      "?%",
      "4+",
      "7!",
      "9^",
      "@^",
      "5^",
      "@#",
      "3%",
      "6+",
      "@&",
      "a#",
      "4&",
      "3&",
    ],
    [
      "*#",
      "@!",
      "7&",
      "5%",
      "2%",
      "9%",
      "9#",
      ">#",
      "@+",
      "7+",
      "4#",
      "*!",
      "9+",
    ],
    [
      "3#",
      "*&",
      "8%",
      "5&",
      "*^",
      "?+",
      "4!",
      "8&",
      "3^",
      "3+",
      "8+",
      "8^",
      "8!",
    ],
    [
      ">+",
      "6#",
      "a&",
      "5!",
      "?^",
      "6^",
      "2&",
      "?&",
      "?#",
      "*%",
    ],
    [
      "*+",
      "3!",
      "6!",
      "8#",
      "5+",
      "9&",
      "a!",
      "?!",
      ">%",
      "9!",
      "2#",
      "a%",
      "2!",
    ],
    [
      "4%",
      "a+",
      "7#",
      ">&",
      "2^",
      "a^",
      "4^",
      "6%",
      "@%",
      "5#",
      "6&",
      "7%",
      ">^",
    ],
  ],
  "laneDiscardPiles": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "maxTurns": 110,
  "turn": 7,
}
`;

exports[`reset attackerPassedLastTurn on discard 15`] = `
"\`V007\` \`n------\`
a0 \`n--\`"
`;

exports[`reset attackerPassedLastTurn on discard 16`] = `
{
  "attackerDeck": [],
  "attackerDiscardPile": [
    "2+",
  ],
  "attackerHand": [
    ">!",
    "7^",
  ],
  "attackerPassedLastTurn": true,
  "attackerStacks": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "defenderHand": [],
  "defenderPassedLastTurn": true,
  "defenderStacks": [
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
  ],
  "laneDecks": [
    [
      "?%",
      "4+",
      "7!",
      "9^",
      "@^",
      "5^",
      "@#",
      "3%",
      "6+",
      "@&",
      "a#",
      "4&",
      "3&",
    ],
    [
      "*#",
      "@!",
      "7&",
      "5%",
      "2%",
      "9%",
      "9#",
      ">#",
      "@+",
      "7+",
      "4#",
      "*!",
      "9+",
    ],
    [
      "3#",
      "*&",
      "8%",
      "5&",
      "*^",
      "?+",
      "4!",
      "8&",
      "3^",
      "3+",
      "8+",
      "8^",
      "8!",
    ],
    [
      ">+",
      "6#",
      "a&",
      "5!",
      "?^",
      "6^",
      "2&",
      "?&",
      "?#",
      "*%",
    ],
    [
      "*+",
      "3!",
      "6!",
      "8#",
      "5+",
      "9&",
      "a!",
      "?!",
      ">%",
      "9!",
      "2#",
      "a%",
      "2!",
    ],
    [
      "4%",
      "a+",
      "7#",
      ">&",
      "2^",
      "a^",
      "4^",
      "6%",
      "@%",
      "5#",
      "6&",
      "7%",
      ">^",
    ],
  ],
  "laneDiscardPiles": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "maxTurns": 110,
  "turn": 8,
}
`;

exports[`reset attackerPassedLastTurn on discard 17`] = `
"\`V008\` \`n------\`
d0 \`n--\`"
`;

exports[`reset attackerPassedLastTurn on discard 18`] = `
{
  "attackerDeck": [],
  "attackerDiscardPile": [
    "2+",
  ],
  "attackerHand": [
    ">!",
    "7^",
  ],
  "attackerPassedLastTurn": true,
  "attackerStacks": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "defenderHand": [],
  "defenderPassedLastTurn": true,
  "defenderStacks": [
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
  ],
  "laneDecks": [
    [
      "?%",
      "4+",
      "7!",
      "9^",
      "@^",
      "5^",
      "@#",
      "3%",
      "6+",
      "@&",
      "a#",
      "4&",
      "3&",
    ],
    [
      "*#",
      "@!",
      "7&",
      "5%",
      "2%",
      "9%",
      "9#",
      ">#",
      "@+",
      "7+",
      "4#",
      "*!",
      "9+",
    ],
    [
      "3#",
      "*&",
      "8%",
      "5&",
      "*^",
      "?+",
      "4!",
      "8&",
      "3^",
      "3+",
      "8+",
      "8^",
      "8!",
    ],
    [
      ">+",
      "6#",
      "a&",
      "5!",
      "?^",
      "6^",
      "2&",
      "?&",
      "?#",
      "*%",
    ],
    [
      "*+",
      "3!",
      "6!",
      "8#",
      "5+",
      "9&",
      "a!",
      "?!",
      ">%",
      "9!",
      "2#",
      "a%",
      "2!",
    ],
    [
      "4%",
      "a+",
      "7#",
      ">&",
      "2^",
      "a^",
      "4^",
      "6%",
      "@%",
      "5#",
      "6&",
      "7%",
      ">^",
    ],
  ],
  "laneDiscardPiles": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "maxTurns": 110,
  "turn": 9,
}
`;

exports[`reset attackerPassedLastTurn on discard 19`] = `
"\`V009\` \`n------\`
a0 x>a / >! xa"
`;

exports[`reset attackerPassedLastTurn on discard 20`] = `
{
  "attackerDeck": [],
  "attackerDiscardPile": [],
  "attackerHand": [
    "7^",
    "2+",
    ">!",
  ],
  "attackerPassedLastTurn": false,
  "attackerStacks": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "defenderHand": [],
  "defenderPassedLastTurn": true,
  "defenderStacks": [
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
    {
      "cards": [],
      "isFaceUp": false,
    },
  ],
  "laneDecks": [
    [
      "?%",
      "4+",
      "7!",
      "9^",
      "@^",
      "5^",
      "@#",
      "3%",
      "6+",
      "@&",
      "a#",
      "4&",
      "3&",
    ],
    [
      "*#",
      "@!",
      "7&",
      "5%",
      "2%",
      "9%",
      "9#",
      ">#",
      "@+",
      "7+",
      "4#",
      "*!",
      "9+",
    ],
    [
      "3#",
      "*&",
      "8%",
      "5&",
      "*^",
      "?+",
      "4!",
      "8&",
      "3^",
      "3+",
      "8+",
      "8^",
      "8!",
    ],
    [
      ">+",
      "6#",
      "a&",
      "5!",
      "?^",
      "6^",
      "2&",
      "?&",
      "?#",
      "*%",
    ],
    [
      "*+",
      "3!",
      "6!",
      "8#",
      "5+",
      "9&",
      "a!",
      "?!",
      ">%",
      "9!",
      "2#",
      "a%",
      "2!",
    ],
    [
      "4%",
      "a+",
      "7#",
      ">&",
      "2^",
      "a^",
      "4^",
      "6%",
      "@%",
      "5#",
      "6&",
      "7%",
      ">^",
    ],
  ],
  "laneDiscardPiles": [
    [],
    [],
    [],
    [],
    [],
    [],
  ],
  "maxTurns": 110,
  "turn": 10,
}
`;
